--- a/css/shap.css
+++ b/css/shap.css
@@ -30,6 +30,7 @@
   height: 0.2rem;
   background-color: black;
   border: 2px black solid;
+  border-radius: 50%;
 }
 /* Shape One Hover Tranformation */
 .shape-one:hover > :nth-child(1) {
@@ -86,43 +87,129 @@
 .shape-five:hover > :nth-child(3) {
   transform: rotate(-145deg) translate(0, 0.05rem);
 }
-/* Shape Six Hover Transofrmation / Animation */
+/* Shape Six Hover Transofrmation / Animation = Rotate into vertical line*/
 .shape-six:hover > :nth-child(1) {
-  animation-name: rotate;
+  animation-name: rotate-vertical;
   animation-duration: 8s;
   animation-iteration-count: 3;
 }
 .shape-six:hover > :nth-child(2) {
-  animation-name: rotate;
+  animation-name: rotate-vertical;
   animation-duration: 8s;
   animation-iteration-count: 3;
 }
-  .shape-six:hover > :nth-child(3) {
-    animation-name: rotate;
-    animation-duration: 8s;
-    animation-iteration-count: 3;
+.shape-six:hover > :nth-child(3) {
+  animation-name: rotate-vertical;
+  animation-duration: 8s;
+  animation-iteration-count: 3;
+}
+@keyframes rotate-vertical {
+  0% {
+    transform: rotate(0);
   }
-  @keyframes rotate {
-    0% {
-      transform: rotate(0);
-    }
-    25% {
-      transform: rotate(90deg);
-    }
-    50% {
-      transform: rotate(180deg);
-    }
-    75% {
-      transform: rotate(270deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-
-/* Shape Seven Hover Transformation */
-
+  25% {
+    transform: rotate(90deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  75% {
+    transform: rotate(270deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/* Shape Seven Hover Transofrmation / Animation = Merge into horizontal line */
+.shape-seven:hover > :nth-child(1) {
+  animation-name: merge-horizontal-down;
+  animation-duration: 1s;
+  animation-iteration-count: 3;
+}
+.shape-seven:hover > :nth-child(2) {
+  animation-name: merge-horizontal;
+  animation-duration: 1s;
+  animation-iteration-count: 3;
+}
+.shape-seven:hover > :nth-child(3) {
+  animation-name: merge-horizontal-up;
+  animation-duration: 1s;
+  animation-iteration-count: 3;
+}
+@keyframes merge-horizontal-down {
+  0% {
+    transform: translate(5px, 2.5px);
+  }
+  10% {
+    transform: translate(10px, 5px);
+  }
+  20% {
+    transform: translate(15px, 7.5px);
+  }
+  30% {
+    transform: translate(20px, 10px);
+  }
+  40% {
+    transform: translate(25px, 12.5px);
+  }
+  50% {
+    transform: translate(20px, 15px);
+  }
+  60% {
+    transform: translate(15px, 17.5px);
+  }
+  70% {
+    transform: translate(10px, 20px);
+  }
+  80% {
+    transform: translate(5px, 22.5px);
+  }
+  90% {
+    transform: translate(0px, 25px);
+  }
+  100% {
+    transform: translate(-2.5px, 27.5px);
+  }
+}
+@keyframes merge-horizontal-up {
+  0% {
+    transform: translate(-5px, -2.5px);
+  }
+  10% {
+    transform: translate(-10px, -5px);
+  }
+  20% {
+    transform: translate(-15px, -7.5px);
+  }
+  30% {
+    transform: translate(-20px, -10px);
+  }
+  40% {
+    transform: translate(-25px, -12.5px);
+  }
+  50% {
+    transform: translate(-20px, -15px);
+  }
+  60% {
+    transform: translate(-15px, -17.5px);
+  }
+  70% {
+    transform: translate(-10px, -20px);
+  }
+  80% {
+    transform: translate(-5px, -22.5px);
+  }
+  90% {
+    transform: translate(-0px, -25px);
+  }
+  100% {
+    transform: translate(+2.5px, -27.5px);
+  }
+}
 /* Shape Eight Hover Transformation */
 
 /* Shape Nine Hover Transformation */
 
 /* Shape Ten Hover Transformation */
+
+/* Button */
