--- a/css/shap.css
+++ b/css/shap.css
@@ -292,7 +292,7 @@
     transform: translate(2.5px, -27.5px);
   }
 }
-/* Shape Nine Hover Transformation */
+/* Shape Nine Advanced Hamburger  */
 
 /* Shape Ten Hover Transformation */
 
